--- a/SATapp/app/build.gradle
+++ b/SATapp/app/build.gradle
@@ -57,6 +57,10 @@ dependencies {
     implementation 'joda-time:joda-time:2.10.5'
     //material ripple
     implementation 'com.balysv:material-ripple:1.0.2'
-
+    //ImagePicker to upload images
+    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
+    implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.2.0'
+    //dropdown list
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
 
 }
