borrar imagen dispositivo, aunque hay que comprobarlo. Revisar todos los multipart

--- a/SATapp/app/src/main/AndroidManifest.xml
+++ b/SATapp/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.home.detail.InventariableDetaileImageActivity"></activity>
         <activity
-            android:name=".ui.home.InventariableDetailActivity"
+            android:name=".ui.home.detail.InventariableDetailActivity"
             android:label="@string/title_activity_inventariable_detail"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -21,7 +22,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gonzaloandcompany.satapp.MainActivity" />
         </activity>
-        <activity android:name=".ui.ticketCreate.TicketCreateActivity"></activity>
+        <activity android:name=".ui.ticketCreate.TicketCreateActivity" />
         <activity android:name=".ui.FullSizeImageActivity" />
         <activity android:name=".ui.ticketsdetail.TicketDetailActivity" />
         <activity android:name=".MainActivity">
