--- a/SATapp/app/src/main/AndroidManifest.xml
+++ b/SATapp/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.ticketCreate.TicketCreateActivity"></activity>
+        <activity android:name=".ui.userdetail.UserDetailActivity"></activity>
+        <activity android:name=".ui.ticketCreate.TicketCreateActivity" />
         <activity android:name=".ui.FullSizeImageActivity" />
         <activity android:name=".ui.ticketsdetail.TicketDetailActivity" />
         <activity android:name=".MainActivity">
