--- a/SATapp/app/build.gradle
+++ b/SATapp/app/build.gradle
@@ -24,6 +24,10 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -64,5 +68,5 @@ dependencies {
     implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.2.0'
     //dropdown list
     implementation 'com.jaredrummler:material-spinner:1.3.1'
-
+    implementation 'me.dm7.barcodescanner:zxing:1.9.13'
 }
