--- a/SATapp/app/src/main/AndroidManifest.xml
+++ b/SATapp/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.detail.InventariableDetaileImageActivity"></activity>
+        <activity
+            android:name=".ui.codeqr.ActivityEscanear"
+            android:label="@string/title_activity_escanear"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ui.codeqr.AsistenteQrActivity" />
+        <activity android:name=".ui.home.detail.InventariableDetaileImageActivity" />
         <activity
             android:name=".ui.home.detail.InventariableDetailActivity"
             android:label="@string/title_activity_inventariable_detail"
@@ -22,7 +28,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gonzaloandcompany.satapp.MainActivity" />
         </activity>
-        <activity android:name=".ui.userdetail.UserDetailActivity"></activity>
+        <activity android:name=".ui.userdetail.UserDetailActivity" />
         <activity android:name=".ui.ticketCreate.TicketCreateActivity" />
         <activity android:name=".ui.FullSizeImageActivity" />
         <activity android:name=".ui.ticketsdetail.TicketDetailActivity" />
