--- a/SATapp/app/build.gradle
+++ b/SATapp/app/build.gradle
@@ -64,5 +64,7 @@ dependencies {
     implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.2.0'
     //dropdown list
     implementation 'com.jaredrummler:material-spinner:1.3.1'
+    //FilePicker DroidNinja
+    implementation 'com.droidninja:filepicker:2.2.1'
 
 }
